# multisnake

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  deploy.sh  docker-compose.yml
.claude/: launch.json
backend/: main.py  pyproject.toml
backend/game/: board.py  bot.py  config.py  food.py  game_room.py  obstacle.py  player.py  protocol.py  snake.py  spatial_grid.py  types.py  vector.py
backend/scripts/: bench_tick.py
backend/tests/: conftest.py  test_main.py
backend/tests/game/: test_board.py  test_bot.py  test_food.py  test_game_room.py  test_obstacle.py  test_player.py  test_protocol.py  test_snake.py  test_spatial_grid.py  test_vector.py
docs/agents/plans/: 2026-07-02-backend-tick-perf.md
docs/agents/research/: 2026-07-02-backend-tick-cost-and-scaling.md
frontend/: index.html  style.css
frontend/js/: audio.js  config.js  input.js  main.js  network.js  renderer.js  state.js  themes.js  touch.js
